Add some tests from an old branch and some code cleanup.