@@ -19,12 +19,11 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
-import static java.util.Collections.emptyList;
-import static java.util.Collections.emptySet;
-import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * @author Tony Vaagenes
@@ -33,9 +32,9 @@ import static org.junit.jupiter.api.Assertions.*;
 public class FederationSearcherTest {
 
     private static class FederationFixture {
-        FederationSearcher federationSearchWithDefaultSources = newFederationSearcher(true, emptyList());
-        private ComponentRegistry<SearchChain> searchChainRegistry = new ComponentRegistry<>();
-        private SourceGroupRegistry sourceGroupRegistry = new SourceGroupRegistry();
+        FederationSearcher federationSearchWithDefaultSources = newFederationSearcher(true, List.of());
+        private final ComponentRegistry<SearchChain> searchChainRegistry = new ComponentRegistry<>();
+        private final SourceGroupRegistry sourceGroupRegistry = new SourceGroupRegistry();
 
         void initializeFederationSearcher(FederationSearcher searcher) {
             searcher.initialize(searchChainRegistry, sourceGroupRegistry);
@@ -96,14 +95,14 @@ public class FederationSearcherTest {
         assertEquals(2, target.searchChain().size());
         assertTrue(target.searchChain().stream()
                 .map(FederationConfig.Target.SearchChain::providerId)
-                .collect(toList()).containsAll(List.of("provider1", "provider2")));
+                .toList().containsAll(List.of("provider1", "provider2")));
     }
 
     @Test
     void source_groups_are_not_inherited_when_inheritDefaultSources_is_false() throws Exception {
         FederationFixture f = new ProvidersWithSourceFixture();
 
-        FederationSearcher federationSearcherWithoutDefaultSources = newFederationSearcher(false, emptyList());
+        FederationSearcher federationSearcherWithoutDefaultSources = newFederationSearcher(false, List.of());
         f.initializeFederationSearcher(federationSearcherWithoutDefaultSources);
 
         FederationConfig federationConfig = getConfig(federationSearcherWithoutDefaultSources);
@@ -127,7 +126,7 @@ public class FederationSearcherTest {
 
         f.registerProviderWithSources(createProvider(ComponentId.fromString("provider1")));
         FederationSearcher federation = newFederationSearcher(true,
-                singletonList(new TargetSpec(ComponentSpecification.fromString("provider1"),
+                List.of(new TargetSpec(ComponentSpecification.fromString("provider1"),
                         new FederationOptions().setTimeoutInMilliseconds(12345))));
         f.initializeFederationSearcher(federation);
 
@@ -147,7 +146,7 @@ public class FederationSearcherTest {
     }
 
     private static ChainSpecification searchChainSpecification(ComponentId id) {
-        return new ChainSpecification(id, new ChainSpecification.Inheritance(null, null), emptyList(), emptySet());
+        return new ChainSpecification(id, new ChainSpecification.Inheritance(null, null), List.of(), Set.of());
     }
 
     private static Provider createProvider(ComponentId id) {
@@ -161,7 +160,7 @@ public class FederationSearcherTest {
     private static FederationConfig getConfig(ConfigProducer configProducer) throws Exception {
         Optional<Class<?>> builderClassOpt = Arrays.stream(FederationConfig.class.getDeclaredClasses())
                 .filter(c -> c.getSimpleName().equals("Builder")).findFirst();
-        if (builderClassOpt.isPresent() == false) {
+        if ( builderClassOpt.isEmpty()) {
             throw new RuntimeException("No Builder class in ConfigInstance.");
         }
         Class<?> builderClass = builderClassOpt.get();
